navbar: Fix bugs caused by zulip.scss refactor.
A few bugs were caused by 7d4cebbc1eea3e249265cb7e0d63ae0d864936ea.
In night mode:
- home icon was hidden by grey box on "All messages" narrow.
- inactive tabs (eg "mentions" and "stars") were hidden behind grey box.
- topic tab was hidden behind grey box in topic narrow.
In both, night mode and normal mode:
- "private messages" tab in individual/group pm narrows was illegible.

These were all results of unexpected differences in precedence rules
caused by the refactor.

--- a/static/styles/zulip.scss
+++ b/static/styles/zulip.scss
@@ -1793,7 +1793,6 @@ a:hover code {
         }
 
         li.inactive {
-            background-color: hsl(0, 0%, 88%);
             border-width: 0px;
             margin-right: -4px;
             font-size: 14px;
